--- a/DMAHelper/MainWindow.xaml
+++ b/DMAHelper/MainWindow.xaml
@@ -5,9 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DMAHelper"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="80" Width="250">
     <Grid>
-        <TextBox x:Name="txt" VerticalScrollBarVisibility="Visible" TextWrapping="Wrap" />
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30"/>
+            <RowDefinition />
+            
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50"/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Label Grid.Row="0" x:Name="txtuid" Grid.Column="0">账号:</Label>
+        <TextBox Grid.Row="0" Grid.Column="1"></TextBox>
+        <Button x:Name="btnOk" Grid.ColumnSpan="2" Click="Button_Click" Grid.Row="1" Grid.Column="0" >确认</Button>
+        <TextBox Grid.Column="3" x:Name="txtLog" Grid.RowSpan="2" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" ></TextBox>
     </Grid>
 </Window>
