--- a/DMAHelper/MainWindow.xaml
+++ b/DMAHelper/MainWindow.xaml
@@ -18,7 +18,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0"  Grid.Column="0">账号:</Label>
-        <TextBox Text="470138890" x:Name="txtuid" Grid.Row="0" Grid.Column="1"></TextBox>
+        <TextBox Text="" x:Name="txtuid" Grid.Row="0" Grid.Column="1"></TextBox>
         <Button x:Name="btnOk" Grid.ColumnSpan="2" Click="Button_Click" Grid.Row="1" Grid.Column="0" >确认</Button>
         <TextBox Grid.Column="3" x:Name="txtLog" Grid.RowSpan="2" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" ></TextBox>
     </Grid>
