--- a/DMAHelper/MainWindow.xaml
+++ b/DMAHelper/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DMAHelper"
         mc:Ignorable="d"
-        Title="斌斌 0.0.1版本" Height="100" Width="280">
+        Title="斌斌 0.0.1版本" Height="150" Width="280">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition />
-            
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50"/>
@@ -19,7 +19,14 @@
         </Grid.ColumnDefinitions>
         <Label Grid.Row="0"  Grid.Column="0">账号:</Label>
         <TextBox Text="" x:Name="txtuid" Grid.Row="0" Grid.Column="1"></TextBox>
-        <Button x:Name="btnOk" Grid.ColumnSpan="2" Click="Button_Click" Grid.Row="1" Grid.Column="0" >确认</Button>
-        <TextBox Grid.Column="3" x:Name="txtLog" Grid.RowSpan="2" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" ></TextBox>
+        <Label Grid.Row="1"  Grid.Column="0" VerticalAlignment="Center">类型:</Label>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Grid.Column="1">
+            
+            <RadioButton  x:Name="rbShuang"  Content="双机" VerticalAlignment="Center" IsChecked="True"  ></RadioButton>
+            <RadioButton   Content="单机" VerticalAlignment="Center" ></RadioButton>
+        </StackPanel>
+        
+        <Button x:Name="btnOk" Grid.ColumnSpan="2" Click="Button_Click" Grid.Row="2" Grid.Column="0" >确认</Button>
+        <TextBox Grid.Column="3" x:Name="txtLog" Grid.RowSpan="3" TextWrapping="Wrap" VerticalScrollBarVisibility="Visible" ></TextBox>
     </Grid>
 </Window>
